--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -2,29 +2,34 @@ name: Flight Scraper
 
 on:
   schedule:
-    # Every 5 minutes
+    # Runs every 5 minutes
     - cron: '*/5 * * * *'
-  workflow_dispatch:  # allows manual trigger
+  workflow_dispatch:  # Allows manual run from GitHub UI
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+    - name: Checkout Repo
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.11
 
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests psycopg2-binary pytz
 
-      - name: Run scraper
-        env:
-          SUPABASE_DB_URL: ${{ secrets.SUPABASE_DB_URL }}
-        run: |
-          python scraper.py
+    - name: Run scraper
+      env:
+        DB_HOST: ${{ secrets.DB_HOST }}
+        DB_NAME: ${{ secrets.DB_NAME }}
+        DB_USER: ${{ secrets.DB_USER }}
+        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        DB_PORT: ${{ secrets.DB_PORT }}
+      run: |
+        python scraper.py
