--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,43 +1,41 @@
 name: Flight Scraper
 
 on:
-  schedule:
-    # Runs every 5 minutes
-    - cron: '*/5 * * * *'
-  workflow_dispatch:  # Allows manual run from GitHub UI
+  workflow_dispatch:
 
 jobs:
-  scrape:
+  db-test:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout Repo
-      uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.11
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install requests psycopg2-binary pytz
+      - name: Install dependencies
+        run: pip install psycopg2-binary
 
-    - name: Run scraper
-      env:
-        DB_HOST: ${{ secrets.DB_HOST }}
-        DB_NAME: ${{ secrets.DB_NAME }}
-        DB_USER: ${{ secrets.DB_USER }}
-        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-        DB_PORT: ${{ secrets.DB_PORT }}
-      run: |
-          echo "Debug: Checking environment variables (masked)"
-          [ -z "$DB_HOST" ] && echo "DB_HOST missing" || echo "DB_HOST OK"
-          [ -z "$DB_NAME" ] && echo "DB_NAME missing" || echo "DB_NAME OK"
-          [ -z "$DB_USER" ] && echo "DB_USER missing" || echo "DB_USER OK"
-          [ -z "$DB_PASSWORD" ] && echo "DB_PASSWORD missing" || echo "DB_PASSWORD OK"
-          [ -z "$DB_PORT" ] && echo "DB_PORT missing" || echo "DB_PORT OK"
+      - name: Check secrets
+        env:
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_PORT: ${{ secrets.DB_PORT }}
+        run: |
+          echo "DB_HOST: ${DB_HOST:+set}"
+          echo "DB_NAME: ${DB_NAME:+set}"
+          echo "DB_USER: ${DB_USER:+set}"
+          echo "DB_PASSWORD: ${DB_PASSWORD:+set}"
+          echo "DB_PORT: ${DB_PORT:+set}"
 
-          echo "Running scraper.py..."
-          python scraper.py
+      - name: Run scraper.py
+        env:
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_PORT: ${{ secrets.DB_PORT }}
+        run: python -u scraper.py
