--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,28 +1,33 @@
 name: Flight Scraper
 
 on:
-  workflow_dispatch:
+  schedule:
+    - cron: "*/5 * * * *"  # every 5 minutes
+  workflow_dispatch:       # manual run option
 
 jobs:
-  db-test:
+  scrape:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install dependencies
-        run: pip install psycopg2-binary
+        run: |
+          python -m pip install --upgrade pip
+          pip install psycopg2-binary requests urllib3
 
-      - name: Run scraper.py
+      - name: Run scraper
         env:
-          DB_HOST: ${{ secrets.DB_HOST }}        # aws-1-ap-south-1.pooler.supabase.com
-          DB_PORT: ${{ secrets.DB_PORT }}        # 5432
-          DB_NAME: ${{ secrets.DB_NAME }}        # postgres
-          DB_USER: ${{ secrets.DB_USER }}        # postgres.sbaweaytsmdmhaclgcwr
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_USER: ${{ secrets.DB_USER }}
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_PORT: ${{ secrets.DB_PORT }}
         run: python -u scraper.py
