--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,16 +1,16 @@
 name: Flight Scraper
 
 on:
+  workflow_dispatch:   # Manual trigger
   schedule:
-    - cron: "*/10 * * * *"  # every 10 minutes
-  workflow_dispatch:       # manual run option
+    - cron: "*/10 * * * *"  # Every 10 minutes (more reliable than 5)
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up Python
